--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: aliceblue;
 }
 
 html {
@@ -18,6 +19,10 @@ html {
 p {
   color: rgb(85, 85, 85);
 }
+
+  /* .page-section{
+
+  } */
 
 /* TRANSITION */
 
@@ -150,7 +155,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  /* height: 96vh; */
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -163,7 +168,8 @@ section {
 /* PROFILE SECTION */
 
 #profile {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto;
   justify-content: center;
   gap: 5rem;
   height: 80vh;
@@ -269,6 +275,7 @@ section {
 
 #about {
   position: relative;
+  height: 100vh;
 }
 
 .about-containers {
@@ -322,6 +329,7 @@ section {
 
 #experience {
   position: relative;
+  height: 100vh;
 }
 
 .experience-sub-title {
@@ -360,29 +368,65 @@ article .icon {
 /* PROJECTS SECTION */
 
 #projects {
-  position: relative;
+  height: 200vh;
+
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+.projects-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 1rem ;
+  align-items: stretch; 
+}
+
+.project {
+  background-color:white;
+  border: solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1%;
+  border-radius: 2rem;
+
 }
 
 .project-img {
   border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  margin: 2rem;
+  width: 50%;
+  height: 50%;
 }
 
 .project-title {
-  margin: 1rem;
-  color: black;
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-top: 2rem;
+}
+
+.project-desc{
+  margin: 80px 50px;
+  color: rgb(40, 40, 40);
+  font-size: large;
+}
+
+.project-btns {
+  display: flex;
+  width: 80%; /* Ensures the buttons take the whole width by default */
 }
 
 .project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+  flex-grow: 1; /* Makes the buttons share available width equally */
+  margin: 10px;
 }
+
+/* Style for odd buttons */
+.project-btns .project-btn:nth-child(2) {
+  background-color: black; /* Example color for odd buttons */
+  color: white; /* Text color for odd buttons */
+}
+
 
 /* CONTACT */
 
@@ -390,7 +434,7 @@ article .icon {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
+  height: 100vh;
 }
 
 .contact-info-upper-container {
